--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "mapbox-gl": "^2.5.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.3.7",
+    "vue-eva-icons": "^1.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -23,12 +27,16 @@
     "@vue/cli-plugin-vuex": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
+    "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss": "^7.0.39",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16",
+    "vue-cli-plugin-tailwind": "^2.0.6",
     "vue-template-compiler": "^2.6.11"
   }
 }
