--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "vue-cli-service serve"
+    "dev": "vue-cli-service serve",
+    "start": "node server.js"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "mapbox-gl": "^2.5.1",
     "register-service-worker": "^1.7.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-eva-icons": "^1.1.1",
